Fixxed the spacing and text for the a attributes added animation and so far Im done now will procceed to work on the main text and the images

--- a/style.css
+++ b/style.css
@@ -26,12 +26,20 @@ header{
 
 .logo a {
     text-decoration: none;
+    font-weight:700;
+    font-size: medium;
     color: white;
-    margin-right: -20px; /* Adjust spacing between links */
     position: relative;
-    left: 1500px;
+    margin-right: -15px; /* Adjust spacing between links */
+    left: 1400px;
+    transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .logo a:hover {
     color: #FFE66D;
+    transform: scale(1.1);
+}
+
+.logo a:focus {
+    color: yellow;
 }
